--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -44,3 +44,14 @@ body {
     font-size: 18px;
   }
 }
+
+.caption {
+  h3 {
+    font-size: 24px;
+    margin: 2px;
+  }
+  p {
+    font-size: 15px;
+    margin: 0px;
+  }
+}
