--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -3,7 +3,7 @@
     <% @listings.each do |listing| %>
        <div class="col-md-3">
           <div class="thumbnail">
-            <%= image_tag listing.image.url %>
+            <%= link_to image_tag(listing.image.url), listing %>
             <div class="caption">
               <h3><%= listing.jobtitle %></h3>
               <p><%= listing.compensation %></p><br>
@@ -11,8 +11,10 @@
               <p><%= "Contact: #{listing.user.email}" %></p>
               <p>Skill Badges:<br><%= listing.skills %></p><br>
               <%= link_to 'Show', listing, class: "btn btn-link" %>
-              <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
-              <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>  
+              <% if (user_signed_in?) && (current_user == listing.user) %>
+                <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
+                <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>  
+              <% end %>
             </div>
           </div>
       </div>
@@ -21,4 +23,6 @@
 </div>
 <br>
 
+<% if user_signed_in? %>
 <%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %>
+<% end %>
