--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,9 +3,10 @@
     <% @users.each do |user| %>
        <div class="col-md-3">
           <div class="thumbnail">
+            <%= link_to image_tag(user.image.url), user %>
             <div class="caption">
               <h3><%= user.name %></h3>
-              
+              <p><%= user.email %></p>
             </div>
           </div>
       </div>
