--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -3,7 +3,7 @@
     <% @listings.each do |listing| %>
        <div class="col-md-3">
           <div class="thumbnail">
-            <%= link_to image_tag(listing.image.url), listing %>
+            <%= link_to image_tag(listing.image.url :thumb), listing %>
             <div class="caption">
               <h3><%= listing.jobtitle %></h3>
               <p><%= listing.compensation %></p><br>
