--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -10,9 +10,10 @@
               <p>Experience:<br><%= skill.level %></p><br>
               <p><%= "Contact: #{skill.user.email}" %></p>
               <%= link_to 'Show', skill, class: "btn btn-link" %>
-              <%= link_to 'Edit', edit_skill_path(skill), class: "btn btn-link" %>
-              <%= link_to 'Destroy', skill, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>  
-            
+              <% if (user_signed_in?) && (current_user == skill.user) %>
+                <%= link_to 'Edit', edit_skill_path(skill), class: "btn btn-link" %>
+                <%= link_to 'Destroy', skill, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>  
+            <% end %>
             </div>
           </div>
       </div>
@@ -21,4 +22,6 @@
 </div>
 <br>
 
-<%= link_to 'New Skill', new_skill_path %>
+<% if user_signed_in? %>
+<%= link_to 'New Skill', new_skill_path, class: "btn btn-link" %>
+<% end %>
