--- a/app/views/skills/show.html.erb
+++ b/app/views/skills/show.html.erb
@@ -1,29 +1,25 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @skill.title %>
-</p>
+<div class="row">
+    <div class="col-md-6">
+      <div class="thumbnail">
+        <%= image_tag @skill.image.url %>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <h3><%= @skill.title %></h3><br>
+      <p><%= @skill.source %></p><br>
+      <p><%= @skill.description %></p><br>
+      <p>Skill Track:<%= @skill.track %></P><br>
+      <p>Skill Level:<%= @skill.level %></p><br>
+      <p>Contact: <%= @skill.user.email %></p>
+      
+    </div>
+</div>
 
-<p>
-  <strong>Source:</strong>
-  <%= @skill.source %>
-</p>
+<br>
 
-<p>
-  <strong>Description:</strong>
-  <%= @skill.description %>
-</p>
-
-<p>
-  <strong>Track:</strong>
-  <%= @skill.track %>
-</p>
-
-<p>
-  <strong>Level:</strong>
-  <%= @skill.level %>
-</p>
-
-<%= link_to 'Edit', edit_skill_path(@skill) %> |
+<% if current_user == @skill.user %>
+  <%= link_to 'Edit', edit_skill_path(@skill), class: "btn btn-link" %> |
+<% end %>
 <%= link_to 'Back', skills_path %>
