--- a/app/views/listings/mylistings.html.erb
+++ b/app/views/listings/mylistings.html.erb
@@ -1,28 +1,46 @@
-<div class="center">
-  <div class="row">
-    <% @listings.each do |listing| %>
-       <div class="col-md-3">
-          <div class="thumbnail">
-            <%= link_to image_tag(listing.image.url :thumb), listing %>
-            <div class="caption">
-              <h3><%= listing.jobtitle %></h3>
-              <p><%= listing.compensation %></p><br>
-              <p><%= listing.description %></p><br>
-              <p><%= "Contact: #{listing.user.email}" %></p>
-              <p>Skill Badges:<br><%= listing.skills %></p><br>
-              <%= link_to 'Show', listing, class: "btn btn-link" %>
-              <% if (user_signed_in?) && (current_user == listing.user) %>
-                <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
-                <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>  
-              <% end %>
-            </div>
-          </div>
-      </div>
-    <% end %>
-  </div>
+<div>
+<% if user_signed_in? %>
+  <%= link_to 'Add New Listing', new_listing_path, class: "btn btn-primary" %>
+<% end %>
 </div>
+
+
+<table class="table table-striped table-bordered">
+  <tr>
+    <th class="center">Image</th>
+    <th class="center">Job Title</th>
+    <th class="center">Compensation</th>
+    <th class="center">Description</th>
+    <th class="center">Skills</th>
+    <th class="center">Action</th>
+  </tr>
+
+  <% @listings.each do |listing| %>
+    <tr>
+      <td><%= image_tag listing.image.url(:thumb) %></td>
+      <td><%= listing.jobtitle %></td>
+      <td><%= listing.compensation %></td>
+      <td><%= listing.description %></td>
+      <td><%= listing.skills %></td>
+      <td>
+        <div class="btn-group">
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+            Action <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to "View", listing %></li>
+            <li><%= link_to "Edit", edit_listing_path(listing) %></li>
+            <li><%= link_to 'Destroy', listing, method: :delete, data: { confirm: "Are you sure?" } %></li>    
+          </ul>
+        </div>
+      </td>
+    </tr>
+  <% end %>
+</table>
+
 <br>
 
-<% if user_signed_in? %>
-<%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %>
-<% end %>
+
+
+
+
