--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,3 +1,8 @@
+<div class="jumbotron">
+  <h2> Find talented SJSU students for your project </h2>
+  
+</div>
+
 <div class="center">
   <div class="row">
     <% @listings.each do |listing| %>
