--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -26,8 +26,8 @@
     <%= f.text_field :compensation, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :skills %><br>
-    <%= f.text_area :skills, class: "form-control" %>
+    <%= f.label :tag_list, "Skill Tags (seperated by commas)" %><br>
+    <%= f.text_field :tag_list, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label :image %><br>
