--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -7,9 +7,9 @@
     <div class="col-md-6">
       <h3><%= @listing.jobtitle %></h3><br>
       <p><%= @listing.compensation %></p><br>
-      <p>Skill Badge Requirments:<%= @listing.skills %></P><br>
+      <p><%= @listing.tag_list %></p><br>
       <p><%= @listing.description %></p><br>
-      <p>Contact: <%= @listing.contactem %></p>
+      <p>Contact: <%= "#{@listing.user.email}" %></p>
     </div>
 </div>
 
