add user show page

--- a/app/views/listings/mylistings.html.erb
+++ b/app/views/listings/mylistings.html.erb
@@ -21,7 +21,7 @@
       <td><%= listing.jobtitle %></td>
       <td><%= listing.compensation %></td>
       <td><%= listing.description %></td>
-      <td><%= listing.skills %></td>
+      <td><%= listing.tag_list %></td>
       <td>
         <div class="btn-group">
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
