--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,12 +5,12 @@
 
   <div class="form-group">
   	<%= f.label :name %><br />
-  	<%= f.text_field :name, autofocus: true, class: "form-control" %>
+  	<%= f.text_field :name, :placeholder =>"Enter First and Last Name", autofocus: true, class: "form-control" %>
   </div>
 
   <div class="form-group">
   	<%= f.label :email %><br />
-  	<%= f.email_field :email, class: "form-control" %>
+  	<%= f.email_field :email, :placeholder =>"Enter Email Address", class: "form-control" %>
   </div>
 
   <div class="form-group">
