--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,12 @@
+
+  <div id="tag_cloud">
+   <% tag_cloud User.tag_counts, %w{s m l} do |tag, css_class| %>
+     <%= link_to tag.name, tag_path(tag.name), class: css_class %>
+   <% end %>
+  </div>
+<br>
+
+
 <div class="center">
   <div class="row">
     <% @users.each do |user| %>
@@ -7,6 +16,7 @@
             <div class="caption">
               <h3><%= user.name %></h3>
               <p><%= user.email %></p>
+              <p><%= raw user.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %></p>
             </div>
           </div>
       </div>
