--- a/app/views/skills/show.html.erb
+++ b/app/views/skills/show.html.erb
@@ -10,6 +10,7 @@
       <h3><%= @skill.title %></h3><br>
       <p><%= @skill.source %></p><br>
       <p><%= @skill.description %></p><br>
+      <p><%= @skill.tag_list %></p><br>
       <p>Skill Track:<%= @skill.track %></P><br>
       <p>Skill Level:<%= @skill.level %></p><br>
       <p>Contact: <%= @skill.user.email %></p>
