--- a/app/views/skills/_form.html.erb
+++ b/app/views/skills/_form.html.erb
@@ -25,12 +25,15 @@
   </div>
   <div class="form-group">
     <%= f.label :track %><br>
-    <%= f.select(:track, options_for_select([['Design'], ['Web Dev Backend'], ['Web Dev Frontend'], ['Business']]), {}, {class: "form-control"}) %>
-    
+    <%= f.select(:track, options_for_select([['Design'], ['Web Dev Backend'], ['Web Dev Frontend'], ['Business']]), {}, {class: "form-control"}) %>  
   </div>
   <div class="form-group">
     <%= f.label :level %><br>
     <%= f.select(:level, options_for_select([['Beginner'], ['Immediate'], ['Advanced']]), {}, {class: "form-control"}) %>
+  </div>
+  <div class="form-group">
+    <%= f.label :tag_list, "Skill Tags (seperated by commas)" %><br>
+    <%= f.text_field :tag_list, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label :image %><br>
