--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -33,6 +33,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :description %><br />
+    <%= f.text_field :description, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :image %><br>
     <%= f.file_field :image, class: "form-control" %>
   </div>
