--- a/app/views/skills/show.html.erb
+++ b/app/views/skills/show.html.erb
@@ -8,7 +8,7 @@
     </div>
     <div class="col-md-6">
       <h3><%= @skill.title %></h3><br>
-      <p><%= @skill.source %></p><br>
+      <p><%= link_to @skill.source, @skill.source %></p><br>
       <p><%= @skill.description %></p><br>
       <p>Skill Track:<%= @skill.track %></P><br>
       <p>Skill Level:<%= @skill.level %></p><br>
