--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,7 @@
     <div class="col-md-6">
       <h3><%= @user.name %></h3><br>
       <p><%= @user.email %></p><br>
+      <p><%= @user.description %></p>
     </div>
 </div>
 
