--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -7,10 +7,9 @@
             <div class="caption">
               <h3><%= skill.title %></h3>
               <p><%= skill.description %></p><br>
-              <p>Track:<br><%= skill.track %></p><br>
-              <p>Experience:<br><%= skill.level %></p><br>
-              <p><%= "Contact: #{skill.user.email}" %></p>
-              <%= link_to 'Show', skill, class: "btn btn-link" %>
+              <p>Track:<%= skill.track %></p><br>
+              <p>Experience:<%= skill.level %></p><br>
+              <%= link_to 'More...', skill, class: "btn btn-link" %>
               <% if (user_signed_in?) && (current_user == skill.user) %>
                 <%= link_to 'Edit', edit_skill_path(skill), class: "btn btn-link" %>
                 <%= link_to 'Destroy', skill, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>  
