--- a/app/views/skills/_form.html.erb
+++ b/app/views/skills/_form.html.erb
@@ -33,6 +33,10 @@
     <%= f.select(:level, options_for_select([['Beginner'], ['Immediate'], ['Advanced']]), {}, {class: "form-control"}) %>
   </div>
   <div class="form-group">
+    <%= f.label :tag_list, "Skill Tags (seperated by commas)" %><br>
+    <%= f.text_field :tag_list, class: "form-control" %>
+  </div>
+  <div class="form-group">
     <%= f.label :image %><br>
     <%= f.file_field :image, class: "form-control" %>
   </div>
