--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -5,10 +5,10 @@
           <div class="thumbnail">
             <%= link_to image_tag(skill.image.url :medium), skill %>
             <div class="caption">
-              <h3><%= skill.title %></h3>
-              <p><%= skill.description %></p><br>
-              <p>Track:<%= skill.track %></p><br>
-              <p>Experience:<%= skill.level %></p><br>
+              <h3><%= skill.title %></h3><br>
+              <p><%= skill.level %> | <%= skill.track %></p><br>
+              <p><%= skill.tag_list %></p><br>
+              <p><%= truncate(skill.description, :length => 80) %></p><br>
               <%= link_to 'More...', skill, class: "btn btn-link" %>
               <% if (user_signed_in?) && (current_user == skill.user) %>
                 <%= link_to 'Edit', edit_skill_path(skill), class: "btn btn-link" %>
