--- a/app/views/skills/show.html.erb
+++ b/app/views/skills/show.html.erb
@@ -9,10 +9,11 @@
     <div class="col-md-6">
       <h3><%= @skill.title %></h3><br>
       <p><%= link_to @skill.source, @skill.source %></p><br>
-      <p><%= @skill.description %></p><br>
       <p>Skill Track:<%= @skill.track %></P><br>
       <p>Skill Level:<%= @skill.level %></p><br>
       <p>Contact: <%= @skill.user.email %></p>
+      <p><%= @skill.description %></p><br>
+      <p><%= @skill.tag_list %></p>
       
     </div>
 </div>
