edit index and about pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
 <h1>IDEAskills.com is a marketplace for projects looking for skilled talent</h1>
 
+<script type="text/javascript" src="//platform.linkedin.com/in.js">
+  extensions: AlumniFacet@//www.linkedin.com/edu/alumni-facet-extension-js
+</script>
+<script type="IN/AlumniFacet" data-linkedin-schoolid="17911"></script>
