--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -18,8 +18,8 @@
             <div class="caption">
               <h3><%= listing.jobtitle %></h3>
               <p><%= listing.compensation %></p><br>
-              <p><%= listing.description %></p><br>
-              <p><%= raw listing.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %></p>
+              <p><%= raw listing.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %></p><br>
+              <p><%= truncate(listing.description, :length => 80) %></p>
               <%= link_to 'More...', listing, class: "btn btn-link" %>
             </div>
           </div>
